Build gradle changed some flags, and other bs updates I can't remember