@@ -109,7 +109,9 @@ test {
         def javafxLibPath = getJavaFXLibPath()
         jvmArgs = [
                 '--module-path', javafxLibPath,
-                '--add-modules', 'javafx.controls,javafx.fxml'
+                '--add-modules', 'javafx.controls,javafx.fxml',
+                '--add-opens',   'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+                '--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
         ]
     }
 }
